# check-bib-for-predatory

./: .gitignore  LICENSE  README.md  check_bib.py  check_bib_helpers.py  environment.yml  predatory_cache_https%3A%2F%2Fbeallslist.net%2F.csv  predatory_cache_https%3A%2F%2Fbeallslist.net%2Fhijacked-journals%2F.csv  predatory_cache_https%3A%2F%2Fbeallslist.net%2Fstandalone-journals%2F.csv  predatory_cache_https%3A%2F%2Fbeallslist.weebly.com%2F.csv  predatory_cache_https%3A%2F%2Fbeallslist.weebly.com%2Fstandalone-journals.html.csv  predatory_cache_https%3A%2F%2Fpredatoryjournals.com%2Fhijacked%2F.csv  predatory_cache_https%3A%2F%2Fpredatoryjournals.com%2Fjournals%2F.csv  predatory_cache_https%3A%2F%2Fpredatoryjournals.com%2Fpublishers%2F.csv  predatory_cache_https%3A%2F%2Fweb.archive.org%2Fweb%2F20200701025650%2Fhttps%3A%2F%2Fpredatoryjournals.com%2Fhijacked%2F.csv  pyproject.toml
