[project]
name = "check-bib-for-predatory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "scikit-learn",
    "tqdm",
    "lxml",
    "colorama",
    "click",
    "pybtex",
    "chardet",
    "setuptools"
]
